--- a/client/scss/App.scss
+++ b/client/scss/App.scss
@@ -22,8 +22,22 @@ html, body, #App-wrapper{
   width: 100%;
 }
 
-.flex-row{
+.flex, .flex-row{
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
   display: flex;
+}
+.flex-row-align{
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  -webkit-align-items: center;
+  align-items:         center;
+  
 }
 .align-center{
   text-align: center;
@@ -80,7 +94,7 @@ body {
       
       #Header, nav {
         //background: #202633;
-        background: $color_blueDark;
+        background: $color_blue_dark;
       }
       
       #Header {
@@ -129,10 +143,14 @@ body {
       #Footer{
         nav{
         }
-        a{
+        a{ // <Link>
           width:      100%;
-          padding:    20px;
+          padding:    0.5em 0;
           text-align: center;
+          button{ //<IconButton>
+            // transform: scale(1) !important; // icons size
+            
+          }
         }
       }
 
