--- a/client/scss/account/Account.scss
+++ b/client/scss/account/Account.scss
@@ -221,7 +221,7 @@
 
     
     // Buttons margin
-    #Login, #ForgotPassword, #Logout{
+    #Login, #LoginGoogle, #ForgotPassword, #Logout{
       margin-bottom: 10px;
     }
 
