Drag&Drop, DrawerLeft(swipe on mobile) [WIP]

--- a/client/scss/Pages.scss
+++ b/client/scss/Pages.scss
@@ -224,6 +224,9 @@ html body #App-wrapper .App .app-main .app-content .Page{
       align-items:    center;
     }
 
+    
+    
+    
   }
 
   
@@ -847,5 +850,13 @@ html body #App-wrapper .App .app-main .app-content .Page{
   
   
 }
+
+    #CardLine{
+      width: 80%;
+      margin: 2em auto;
+    }
+    
+
+
 
 
