--- a/client/scss/Pages.scss
+++ b/client/scss/Pages.scss
@@ -851,10 +851,10 @@ html body #App-wrapper .App .app-main .app-content .Page{
   
 }
 
-    #CardLine{
-      width: 80%;
-      margin: 2em auto;
-    }
+#CardFull{
+  width: 80%;
+  margin: 2em auto;
+}
     
 
 
