--- a/client/scss/Pages.scss
+++ b/client/scss/Pages.scss
@@ -75,37 +75,37 @@ html body #App-wrapper .App .app-main .app-content .Page{
 
     input{
       color: $color_grey_light;
+      font-size: 16px !important;
     }
 
+    p{
+      color: $color_blue_dark;
+    }
     .task-new, .task-list{
       margin: 1em auto 2em auto;
     }
 
     .task-new{
+      width: 100%;
       form {
-        position:       relative;
+        width: 100%;
 
-        button{
+        button.add{
           //background: $color_active;
           color:       $color_blue_medium2;
           font-size:   1.5em;
           line-height: 1.5em;
           margin-top:  -0.2em;
           padding:     0em 0.7em;
+          width: 3em;
         }
-
-        input {
-          width:          100%;
-          padding-right:  80px;
-          font-size:      1em;
-          color:          $color_blue_medium2;
+        >div{
+          width: 100%;
         }
-
       }
     }
 
     .task-list{
-
       h2{}
 
       .hide-completed {
@@ -124,21 +124,32 @@ html body #App-wrapper .App .app-main .app-content .Page{
         .task-li{
           position:     relative;
           list-style:   none;
-          padding:      1.25em 0;
+          padding:      1.25em 1em;
           border-bottom:$color_grey_medium solid 1px;
-          color:        $color_grey_light;
+          color:        $color_blue_dark;
+          
+          background: white;
+          margin-top: 1em;
 
           span{
             width: 100%;
 
           }
+          
           .text {
             display:  block;
             width:    100%;
-            margin-left: 1em;
+            margin-left: 0.6em;
             cursor:   pointer;
           }
 
+          .username{
+            width:      5em;
+            min-width:  100%;
+            margin-bottom: 0.3em;
+            color: $color_grey_medium;
+          }
+          
           // Button public/private
           button.toggle-private{
             padding:      0.2em 0;
@@ -167,13 +178,13 @@ html body #App-wrapper .App .app-main .app-content .Page{
 
 
           &.task-checked, &.task-private{
-            color:      $color_grey_light;
+            color:      $color_blue_dark;
             //background: $color_blue_medium_transparent;
             transition: all 0.25s;
           }
 
           &.task-checked{
-            color: $color_blue_medium2;
+            color: $color_grey_medium;
             .text{
               text-decoration: line-through; 
             }
@@ -188,25 +199,24 @@ html body #App-wrapper .App .app-main .app-content .Page{
 
           .edit-task{
             width: 100%;
-            text-align: center;
             padding: 0em 0.5em 0 1em;
             margin-top: -0.85em;
             input{
               width:        100%;
               margin-top:   0em;
               margin-bottom: 0em;
-              font-size:    1em;
-            text-align: center;
+              font-size:    1.1em !important;
+              color:        $color_blue_dark;
             }
             button{
-              background:   $color_blue_medium2;
-              color:        $color_blue_medium1;
+              ////background:   $color_blue_medium2;
+              //color:        $color_blue_medium1;
               padding:      0.3em 0.9em;
               margin-right: 0.3em;
               margin-top:   0.5em;
               &[type="submit"]{
-              background:   $color_active;
-              color:        $color_blue_medium2;
+             // background:   $color_active;
+             // color:        $color_blue_medium2;
               }
             }
           }
