--- a/client/scss/account/Account.scss
+++ b/client/scss/account/Account.scss
@@ -8,9 +8,9 @@
   width:      100%;
   max-width:  20em;
   //min-width: 20em;
-  padding: 1.3em 2em 2em 2em;
-  margin: 1em 1em;
-  background: $color_blue_medium_transparent;
+  padding: 0em 2em 2em 2em;
+  margin: 0em 1em 1em 1em;
+  //background: white;
 
   input{
     // disable yellow input background when autocompletion
