--- a/client/scss/ui/ui.css
+++ b/client/scss/ui/ui.css
@@ -2,7 +2,7 @@
 /* Buttons */
 /* line 5, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/ui/ui.scss */
 .button-nav {
-  color: #ebebeb;
+  color: #8E93AA;
   transition: all 0.2s; }
   /* line 9, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/ui/ui.scss */
   .button-nav:active {
