--- a/client/scss/App.css
+++ b/client/scss/App.css
@@ -50,7 +50,7 @@ html, body, #App-wrapper {
 
 /* line 52, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/App.scss */
 .avatar {
-  background: #315481;
+  background: #D0D0F2;
   border-radius: 100%; }
 
 /* line 56, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/App.scss */
@@ -63,13 +63,13 @@ html, body, #App-wrapper {
 
 /* line 63, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/App.scss */
 .avatarDefault {
-  background: #ebebeb;
-  color: #f26e63; }
+  background: #8E93AA;
+  color: #FF8A65; }
 
 /* line 67, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/App.scss */
 .avatarDisconnected {
-  background: #315481;
-  color: #f26e63; }
+  background: #D0D0F2;
+  color: #FF8A65; }
 
 /* line 72, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/App.scss */
 input {
@@ -81,60 +81,57 @@ body #App-wrapper .App {
   width: 100%;
   height: 100%;
   flex-direction: column; }
-  /* line 91, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/App.scss */
-  body #App-wrapper .App #Header, body #App-wrapper .App #Footer {
-    position: relative; }
-  /* line 95, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/App.scss */
-  body #App-wrapper .App #Header, body #App-wrapper .App nav {
-    background: #131d2a; }
-  /* line 100, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/App.scss */
+  /* line 92, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/App.scss */
   body #App-wrapper .App #Header {
-    padding: 0.8em 1.5em;
-    align-items: center; }
-    /* line 105, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/App.scss */
+    position: relative;
+    background: #3f51b5; }
+    /* line 98, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/App.scss */
     body #App-wrapper .App #Header h1 {
-      width: 100%;
-      font-size: 1em;
-      color: #466da0; }
-    /* line 111, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/App.scss */
+      color: #ffffff; }
+    /* line 102, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/App.scss */
     body #App-wrapper .App #Header #networkBadge {
       transition: background-color 0.6s;
       z-index: 1000000;
       position: absolute;
-      top: 2.7em;
-      right: 0.8em;
+      top: 3em;
+      right: 0.5em;
       height: 0.8em;
       width: 0.8em;
       min-width: 0.8em;
-      border-radius: 100%; }
-    /* line 123, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/App.scss */
+      border-radius: 100%;
+      pointer-events: none; }
+    /* line 115, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/App.scss */
     body #App-wrapper .App #Header a {
-      background: none;
-      transition: all 0.25s ease-out;
-      transform: scale(1); }
-      /* line 127, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/App.scss */
-      body #App-wrapper .App #Header a:active {
-        transform: scale(1.1); }
-      /* line 130, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/App.scss */
+      background: none; }
+      /* line 117, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/App.scss */
       body #App-wrapper .App #Header a .avatar {
+        margin-top: 0.5em;
+        margin-right: 0.5em;
         font-size: 12px;
         width: 3em;
         height: 3em;
         max-width: 3em;
         max-height: 3em;
         min-width: 3em;
-        min-height: 3em; }
-  /* line 146, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/App.scss */
-  body #App-wrapper .App #Footer a {
-    width: 100%;
-    padding: 0.5em 0;
-    text-align: center; }
-  /* line 158, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/App.scss */
+        min-height: 3em;
+        transition: all 0.25s ease-out;
+        transform: scale(1); }
+        /* line 132, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/App.scss */
+        body #App-wrapper .App #Header a .avatar:active {
+          transform: scale(1.1); }
+  /* line 141, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/App.scss */
+  body #App-wrapper .App .Drawer #drawerTop {
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-color: #3f51b5;
+    padding: 5em 0em 2em 1em;
+    color: #ffffff; }
+  /* line 151, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/App.scss */
   body #App-wrapper .App .app-main {
     flex: 1; }
-    /* line 161, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/App.scss */
+    /* line 154, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/App.scss */
     body #App-wrapper .App .app-main .app-content {
-      overflow: auto;
       order: 2; }
 
 /*# sourceMappingURL=App.css.map */
