--- a/client/scss/App.scss
+++ b/client/scss/App.scss
@@ -79,55 +79,44 @@ input{
 
 body {
   //background: $color_blue_medium2;
-
-  #App-wrapper{
+ 
+  #App-wrapper{ 
     
     .App{
       width:  100%;
       height: 100%;
       flex-direction: column;
-
-      
-      #Header, #Footer {
-        position:   relative;
-      }
-      
-      #Header, nav {
-        //background: #202633;
-        background: $color_blue_dark;
-      }
+ 
+    
       
       #Header {
-        padding:     0.8em 1.5em;
-        align-items: center;
-        
+        position:   relative;
+        background: $color_secondary;
+        //padding:     0.8em 1.5em;
+        //align-items: center;
         
         h1{
-          width:      100%;
-          font-size:  1em;
-          color :     $color_blue_medium1;
+          color :     $color_primary;
         }
         
         #networkBadge{
           transition: background-color 0.6s;
           z-index: 1000000;
           position: absolute;
-          top:      2.7em;
-          right:    0.8em;
+          top:      3em;
+          right:    0.5em;
           height:   0.8em;
           width:    0.8em;
           min-width:  0.8em;
           border-radius: 100%;
+          pointer-events: none;
         }
         
         a{
           background: none;
-          transition: all 0.25s ease-out;
-          transform: scale(1);
-          &:active{
-            transform: scale(1.1);
-          }
           .avatar{
+              margin-top:   0.5em;
+              margin-right: 0.5em;
               font-size:  12px;
               width:      3em;
               height:     3em;
@@ -135,34 +124,37 @@ body {
               max-height: 3em;
               min-width:  3em;
               min-height: 3em;
-
-          }
-        }
-      }
-      
-      #Footer{
-        nav{
-        }
-        a{ // <Link>
-          width:      100%;
-          padding:    0.5em 0;
-          text-align: center;
-          button{ //<IconButton>
-            // transform: scale(1) !important; // icons size
             
+            
+          //display: none;
+          transition: all 0.25s ease-out;
+          transform: scale(1);
+          &:active{
+            transform: scale(1.1);
+          }
+
           }
         }
       }
-
       
+      .Drawer{
+        #drawerTop{
+          //background-image: url('/medias/backgrounds/background-drawer.png'); 
+          background-position: center;
+          background-size: cover;
+          background-repeat: no-repeat;
+          background-color: $color_secondary;
+          padding: 5em 0em 2em 1em;
+          color: $color_primary;
+        }
+      }
       .app-main {
         flex: 1;
 
         .app-content {
-          overflow: auto;
           order: 2;
           //background-color: #FFFFFF;
-          //background: $color_blue_medium1;
+          //background: $color_secondary;
         }
       }
 
