--- a/client/scss/account/Account.scss
+++ b/client/scss/account/Account.scss
@@ -8,15 +8,14 @@
   width:      100%;
   max-width:  20em;
   //min-width: 20em;
-  padding: 0em 2em 2em 2em;
-  margin: 0em 1em 1em 1em;
-  //background: white;
+  margin-bottom:  1em;
+  //background: $color_secondary;
 
   input{
     // disable yellow input background when autocompletion
     &:-webkit-autofill {
-        -webkit-box-shadow: 0 0 0px 1000px $color_blue_dark inset;
-        -webkit-text-fill-color: $color_grey_light !important;
+        -webkit-box-shadow: 0 0 0px 1000px $color_primary inset;
+        -webkit-text-fill-color: $color_text_secondary !important;
     }
   }
 
@@ -93,11 +92,11 @@
             }
             &#textUsername{
               font-size: 22px;
-              color: $color_active;
+              color: $color_tertiary;
             }
             &#textEmail{
               font-size: 12px;
-              color: $color_grey_medium;
+              color: $color_text_secondary; 
               width: 10em;
               overflow: hidden;
               text-overflow: ellipsis;
@@ -105,7 +104,7 @@
             }
             &#textEmailStatut{
               font-size: 10px;
-              color: $color_blue_medium1;
+              color: $color_text_disabled;
             }
           }
 
